[gd_scene load_steps=6 format=3 uid="uid://cbr7qgc1wuu8c"]

[ext_resource type="Theme" uid="uid://dk8otametd6bj" path="res://Themes/latte_theme.tres" id="1_uk5l7"]
[ext_resource type="Script" uid="uid://7jqyd0hp2ool" path="res://Scenes/control.gd" id="2_t3i8p"]
[ext_resource type="AudioStream" uid="uid://cmsq2cti3m61c" path="res://Audio/Cat.wav" id="3_5jo4y"]
[ext_resource type="Texture2D" uid="uid://ctaroot50uqay" path="res://Images/Cat.jpg" id="4_4vxke"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uk5l7"]
bg_color = Color(0.737255, 0.752941, 0.8, 1)

[node name="Cartilla" type="Control" node_paths=PackedStringArray("title_label", "image", "audio")]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
theme = ExtResource("1_uk5l7")
script = ExtResource("2_t3i8p")
title_label = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TitleLabel")
image = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TextureRect")
audio = NodePath("AudioStreamPlayer")
data_path = "res://Data/Animals.json"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5jo4y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.5
offset_top = -284.5
offset_right = 513.5
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_uk5l7")
theme_override_styles/panel = SubResource("StyleBoxFlat_uk5l7")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cat"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_4vxke")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "<-"

[node name="AudioButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "audio"

[node name="RightButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "->"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
